--- a/index.html
+++ b/index.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title></title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+    <script>
+        $(document).ready(function(){
+            $("button").click(function(){
+                $.getJSON("package.json", function(result){
+                    $.each(result, function(i, field){
+                        document.write(result.league.games[0].game.home.name)
+                    });
+                });
+            });
+        });
+    </script>
 </head>
 <body>
-
+<button>Get JSON data</button>
+<div id="dude"></div>
 </body>
 </html>
